# snapstash

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: clip.rs  database.rs  main.rs  parameters.rs  server.rs
src/lib/: ImageModal.svelte  ImageSquare.svelte  Masonry.svelte  SearchBar.svelte  SearchModal.svelte  SettingsModal.svelte  TagAdder.svelte  TagBar.svelte  TagModal.svelte  TagPill.svelte  api.ts  config.svelte.ts  images.svelte.ts  images.ts  loadassets.ts  tags.svelte.ts  tags.ts  types.ts
