[package]
name = "SnapStash"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "protocol-asset",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
png = "0.17.9"
rusqlite = { version = "0.29.0", features = ["bundled"] }
thiserror = "1.0.44"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
actix-web = "4"
actix-cors = "0.6"
actix-files = "0.6"
urlencoding = "2"
tokio = { version = "1", features = ["full"] }
candle-core = { version = "0.9.2", features = ["cuda"] }
candle-nn = { version = "0.9.2", features = ["cuda"] }
candle-transformers = { version = "0.9.2", features = ["cuda"] }
tokenizers = "0.21.0"
image = "0.24"
anyhow = "1.0"
hf-hub = { version = "0.5.0" }
env_logger = "0.11"
log = "0.4"
cudarc = { version = "0.19", features = ["fallback-latest"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
